Bug 67920 - AccountsService: Failed to create ConsoleKit proxy
Summary: AccountsService: Failed to create ConsoleKit proxy
Status: RESOLVED FIXED
Alias: None
Product: accountsservice
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Matthias Clasen
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-08 20:54 UTC by Pacho Ramos
Modified: 2013-08-08 21:22 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Pacho Ramos 2013-08-08 20:54:13 UTC
We get this error as consolekit is not supplying systemd unit files to prevent collisions between logind and consolekit:
ago 08 22:44:35 belkin4 gdm[250]: AccountsService: Failed to create ConsoleKit proxy: Error al llamar StartSereviceByName para org.freedesktop.ConsoleKit: GDBus.Error:org.freedesktop.systemd1.LoadFailed: Unit console-kit-daem
mon.service failed to load: No such file or directory. See system logs and '


Is this normal? If running on systemd, why does it try to create that bridge?

Thanks
Comment 1 Ray Strode [halfline] 2013-08-08 21:07:47 UTC
no good reason
Comment 3 Pacho Ramos 2013-08-08 21:22:36 UTC
Thanks for the fast fix


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.