lib: don't connect to ConsoleKit if logind is running

There's no reason to, so don't bother.

https://bugs.freedesktop.org/show_bug.cgi?id=67920